how to update